# CppCore

./: .gitignore  CMakeLists.txt  README.md
Core/: CMakeLists.txt
Core/inc/Core/: BigInt.h  BigInt.inl  Concepts.h
Core/inc/Core/Algorithms/: AStar.h  Shoelace.h  ShuntingYard.h  md5Constexpr.h
Core/inc/Core/Constexpr/: ConstexprAlgorithms.h  ConstexprBits.h  ConstexprCollections.h  ConstexprGeometry.h  ConstexprHash.h  ConstexprIlp.h  ConstexprMath.h  ConstexprMatrix.h  ConstexprRandom.h  ConstexprRegex.h  ConstexprStrUtils.h  ConstexprUnionFind.h
Core/inc/Core/DesignPatterns/: Crtp.h
Core/inc/Core/Instrumentation/Benchmark/: Benchmark.h  ResourceMonitor.h  Stats.h
Core/inc/Core/Macros/: PreProcessorOverride.h
Core/inc/Core/Platform/: Types.h
Core/inc/Core/Threading/: Runner2.h  Tasks.h
Core/inc/Core/Utilities/: BitConversion.h  ConstexprCounter.h  ExpressionEvaluator.h  FileUtils.h  Format.h  Require.h  StringUtils.h  TimeUtils.h
Core/src/: BigInt.cpp  Concepts.tests.cpp
Core/src/Constexpr/: ConstexprBits.cpp  ConstexprRandom.cpp  ConstexprStrUtils.cpp
Core/src/Instrumentation/Benchmark/: ResourceMonitor.cpp  ResourceMonitor_Linux.h  ResourceMonitor_Windows.cpp  ResourceMonitor_Windows.h  Stats.cpp
Core/src/Utilities/: ExpressionEvaluator.cpp  TimeUtils.cpp
CoreTest/: CMakeLists.txt
CoreTest/inc/: TestCommon.h
CoreTest/src/Instrumentation/: Logging.test.cpp
CoreTest/src/Instrumentation/Benchmark/: ResourceMonitor.test.cpp  Stats.test.cpp
CoreTest/src/Threading/: Runner2.test.cpp  Tasks.test.cpp
CoreTest/src/Utilities/: TimeUtils.test.cpp
